# OTA-CAN-Update-Telemetry-Tool

./: .gitignore  README.md
ARDUINO-MCP2515/arduino_mcp2515/: README_ARDUINO.md  arduino_mcp2515.ino
ARDUINO-MCP2515/arduino_mcp2515/can_send/: can_send.ino
Block-Diagrams/: .$Software-Architecture-2.drawio.dtmp  .$Software-Architecture.drawio.bkp  .$System-Diagram.drawio.bkp  Software-Architecture-2.drawio  Software-Architecture.drawio  System-Diagram.drawio
CAN-ESP32-SOCKET/: CMakeLists.txt  README.md
CAN-ESP32-SOCKET/components/mcp2515/: CMakeLists.txt  can.h  mcp2515.c  mcp2515.h
CAN-ESP32-SOCKET/main/: CMakeLists.txt  app_main.c  can_2_mqtt.c  can_2_mqtt.h  can_stuff.c  can_stuff.h  core0.c  core0.h  core1.c  core1.h  hello_world_main.c  mcp2515_driver.c  mcp2515_driver.h  mqtt_stuff.c  mqtt_stuff.h  ringbuffer.c  ringbuffer.h  twai_task.c  twai_task.h  wifi_stuff.c  wifi_stuff.h
UI_development/backend/: Flask_1.py
UI_development/backend/templates/: message.html
UI_development/backend/templates/checkpoint/: checkpoint.html  checkpoint1.html
UI_development/backend/templates/checkpoint_login/: checkpoint_login.html
UI_development/backend/templates/dashboard/: index.html  index1.html  index2.html  index3.html  index4.html
UI_development/backend/templates/message/: message.html
UI_development/backend/templates/pages/: login.html
UI_development/backend/templates/pastlog/: pastlog.html
UI_development/templates/: index.html
